--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
     <div class="App">
         <header class="App-header">
-            <img src="logo.png" class="App-logo" alt="logo">
+            <img src="./logo.png" class="App-logo" alt="logo">
             <p class="typing">COMING SOON 💫</p>
             <div class="medsos">
                 <li>
